--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MoneyActivity"></activity>
-        <activity android:name=".ScoreActivity">
+        <activity android:name=".MoneyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
